working on list mobile

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
                 <button class="contactBtn">Contact</button>
             </div>
         </section>
-        <section></section>
+        <section class="quoteSection flexCol">
+            <h3 class="quoteTitle">What´s different between pros?</h3>
+            <p class="quoteDescription">Manage provides all the functionality your
+                teas needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
+
+        </section>
         <section></section>
         <section></section>
         <section></section>
