working on card design

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <section class="heroSection flexCol">
+        <!-- <section class="heroSection flexCol">
             <img id="padelPlayer" src="./root/img/padel-intro.png" alt="Padel Player">
             <div class="padelIntro">
                 <h1 class="mainTitle">LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
@@ -44,8 +44,20 @@
             <p class="quoteDescription">Manage provides all the functionality your
                 teas needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
 
+        </section> -->
+        <section class="listSection">
+            <ul class="flexCol">
+                <li class="flexCol">
+                    <div class="card">
+                        <div class="flexRow titleContainer">
+                            <h4 class="cardNumber">01</h4>
+                            <h4 class="cardTitle">Track company-wide progress</h4>
+                        </div>
+                        <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
+                    </div>
+                </li>
+            </ul>
         </section>
-        <section></section>
         <section></section>
         <section></section>
     </main>
