--- a/index.html
+++ b/index.html
@@ -50,10 +50,28 @@
                 <li class="flexCol">
                     <div class="card">
                         <div class="flexRow titleContainer">
-                            <h4 class="cardNumber">01</h4>
+                            <h4 class="cardNumber flexCol">01</h4>
                             <h4 class="cardTitle">Track company-wide progress</h4>
                         </div>
-                        <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
+                        <p class="cardDescription">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
+                    </div>
+                </li>
+                <li class="flexCol">
+                    <div class="card">
+                        <div class="flexRow titleContainer">
+                            <h4 class="cardNumber flexCol">01</h4>
+                            <h4 class="cardTitle">Track company-wide progress</h4>
+                        </div>
+                        <p class="cardDescription">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
+                    </div>
+                </li>
+                <li class="flexCol">
+                    <div class="card">
+                        <div class="flexRow titleContainer">
+                            <h4 class="cardNumber flexCol">01</h4>
+                            <h4 class="cardTitle">Track company-wide progress</h4>
+                        </div>
+                        <p class="cardDescription">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
                     </div>
                 </li>
             </ul>
