--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <!-- <section class="heroSection flexCol">
+        <section class="heroSection flexCol">
             <img id="padelPlayer" src="./root/img/padel-intro.png" alt="Padel Player">
             <div class="padelIntro">
                 <h1 class="mainTitle">LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
@@ -44,7 +44,7 @@
             <p class="quoteDescription">Manage provides all the functionality your
                 teas needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
 
-        </section> -->
+        </section>
         <section class="listSection">
             <ul class="flexCol">
                 <li class="flexCol">
