best card finished - remove extra cards

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <section class="heroSection flexCol">
+        <!-- <section class="heroSection flexCol">
             <img id="padelPlayer" src="./root/img/padel-intro.png" alt="Padel Player">
             <div class="padelIntro">
                 <h1 class="mainTitle">LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
@@ -75,8 +75,26 @@
                     </div>
                 </li>
             </ul>
+        </section> -->
+        <section class="bestSection flexCol">
+            <h2 class="bestTitle">Best of the month</h2>
+            <div class="bestCard flexCol">
+                <img class="bestCardImage" src="./root/img/avatar.lebron.png" alt="Lebron image">
+                <h4 class="bestCardTitle">Lebron</h4>
+                <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+            </div>
+            <div class="bestCard flexCol">
+                <img class="bestCardImage" src="./root/img/avatar.lebron.png" alt="Lebron image">
+                <h4 class="bestCardTitle">Lebron</h4>
+                <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+            </div>
+            <div class="bestCard flexCol">
+                <img class="bestCardImage" src="./root/img/avatar.lebron.png" alt="Lebron image">
+                <h4 class="bestCardTitle">Lebron</h4>
+                <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+            </div>
+
         </section>
-        <section></section>
         <section></section>
     </main>
 
