--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <!-- <section class="heroSection flexCol">
+        <section class="heroSection flexCol">
             <img id="padelPlayer" src="./root/img/padel-intro.png" alt="Padel Player">
             <div class="padelIntro">
                 <h1 class="mainTitle">LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
@@ -75,7 +75,7 @@
                     </div>
                 </li>
             </ul>
-        </section> -->
+        </section>
         <section class="bestSection flexCol">
             <h2 class="bestTitle">Best of the month</h2>
             <div class="bestCard flexCol">
