--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <!-- <section class="heroSection flexCol">
+        <section class="heroSection flexCol">
             <img id="padelPlayer" src="./root/img/padel-intro.png" alt="Padel Player">
             <div class="padelIntro">
                 <h1 class="mainTitle">LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
@@ -94,12 +94,36 @@
                 <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </div>
 
-        </section> -->
+        </section>
         <section class="lowerQuoteSection flexCol">
             <h2 class="lowerQuoteTitle">Get to  know the best teams of the year</h2>
             <button class="quoteButton">Go for it</button>
         </section>
     </main>
+
+    <footer class="flexCol ">
+        <div class="footerInputContainer flexRow">
+            <input class="footerInput" type="text" name="" placeholder="Update in your inbox...">
+            <button class="goBtn">Go</button>
+        </div>
+        <div class="footerLinks flexRow"></div>
+        <div class="footerImages flexCol">
+            <nav class="flexRow iconContainer">
+                <a href="#"><img src="./root/img/icon-facebook.svg"></a>
+                <a href="#"><img src="./root/img/icon-youtube.svg"></a>
+                <a href="#"><img src="./root/img/icon-twitter.svg"></a>
+                <a href="#"><img src="./root/img/icon-pinterest.svg"></a>
+                <a href="#"><img src="./root/img/icon-instagram.svg"></a>
+            </nav>
+
+            
+            <img src="./root/img/logo.svg" class="footerLogo" alt="Sportit Logo">
+        </div>
+        <p class="copyrigth">Copyright 2020. All Rights Reserved</p>
+    </footer>
+
+
+
 
 
 
