--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img class="menuBtn" src="./root/img/icon-hamburger.svg" alt="Menu Icon">
     </header>
 
-    <main>
+     <main>
         <section class="heroSection flexCol">
             <img id="padelPlayer" src="./root/img/padel-intro.png" alt="Padel Player">
             <div class="padelIntro">
@@ -106,14 +106,26 @@
             <input class="footerInput" type="text" name="" placeholder="Update in your inbox...">
             <button class="goBtn">Go</button>
         </div>
-        <div class="footerLinks flexRow"></div>
+        <div class="footerLinks flexRow">
+            <ul class="footerLinksList">
+                <li class="footerLink"><a class="footerA" href="#">Home</a></li>
+                <li class="footerLink"><a class="footerA" href="#">Pricing</a></li>
+                <li class="footerLink"><a class="footerA" href="#">Products</a></li>
+                <li class="footerLink"><a class="footerA" href="#">About Us</a></li>
+            </ul>
+            <ul class="footerLinksList">
+                <li class="footerLink"><a class="footerA" href="#">Training</a></li>
+                <li class="footerLink"><a class="footerA" href="#">Community</a></li>
+                <li class="footerLink"><a class="footerA" href="#">Privacy Policy</a></li>
+            </ul>
+        </div>
         <div class="footerImages flexCol">
             <nav class="flexRow iconContainer">
-                <a href="#"><img src="./root/img/icon-facebook.svg"></a>
-                <a href="#"><img src="./root/img/icon-youtube.svg"></a>
-                <a href="#"><img src="./root/img/icon-twitter.svg"></a>
-                <a href="#"><img src="./root/img/icon-pinterest.svg"></a>
-                <a href="#"><img src="./root/img/icon-instagram.svg"></a>
+                <a href="#"><img class="icon" src="./root/img/icon-facebook.svg"></a>
+                <a href="#"><img class="icon" src="./root/img/icon-youtube.svg"></a>
+                <a href="#"><img class="icon" src="./root/img/icon-twitter.svg"></a>
+                <a href="#"><img class="icon" src="./root/img/icon-pinterest.svg"></a>
+                <a href="#"><img class="icon" src="./root/img/icon-instagram.svg"></a>
             </nav>
 
             
