working with header on desktop

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./root/css/styleDesktop.css" />
+    <!-- <link rel="stylesheet" href="./root/css/styleDesktop.css" /> -->
     <link rel="stylesheet" href="./root/css/styleMobile.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,16 +17,16 @@
   <body>
     <header class="headerContainer flexRow">
       <img id="mainLogo" src="./root/img/logo.svg" alt="Sportit Logo" />
-      <!-- <nav class="anchorContainer">
-        <ul>
-          <li><a class="navLink" href="#"></a></li>
-          <li><a class="navLink" href="#"></a></li>
-          <li><a class="navLink" href="#"></a></li>
-          <li><a class="navLink" href="#"></a></li>
-          <li><a class="navLink" href="#"></a></li>
+      <nav class="anchorContainer">
+        <ul class="flexRow">
+          <li><a class="navLink" href="#">Sports</a></li>
+          <li><a class="navLink" href="#">Products</a></li>
+          <li><a class="navLink" href="#">About Us</a></li>
+          <li><a class="navLink" href="#">Training</a></li>
+          <li><a class="navLink" href="#">Community</a></li>
         </ul>
+    </nav>
         <button class="contactBtn">Contact</button>
-    </nav> -->
         <img class="menuBtn" src="./root/img/icon-hamburger.svg" alt="Menu Icon">
     </header>
 
