continue with hero section on desktop

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   </head>
   <body>
     <header class="headerContainer flexRow">
-      <img id="mainLogo" src="./root/img/logo.svg" alt="Sportit Logo" />
-      <nav class="anchorContainer">
-        <ul class="flexRow">
-          <li><a class="navLink" href="#">Sports</a></li>
-          <li><a class="navLink" href="#">Products</a></li>
-          <li><a class="navLink" href="#">About Us</a></li>
-          <li><a class="navLink" href="#">Training</a></li>
-          <li><a class="navLink" href="#">Community</a></li>
-        </ul>
-    </nav>
+        <img id="mainLogo" src="./root/img/logo.svg" alt="Sportit Logo" />
+        <nav class="anchorContainer">
+            <ul class="flexRow">
+                <li class="navLinkLi"><a class="navLink" href="#">Sports</a></li>
+                <li class="navLinkLi"><a class="navLink" href="#">Products</a></li>
+                <li class="navLinkLi"><a class="navLink" href="#">About Us</a></li>
+                <li class="navLinkLi"><a class="navLink" href="#">Training</a></li>
+                <li class="navLinkLi"><a class="navLink" href="#">Community</a></li>
+            </ul>
+        </nav>
         <button class="contactBtn">Contact</button>
         <img class="menuBtn" src="./root/img/icon-hamburger.svg" alt="Menu Icon">
     </header>
