working with style on cards

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                 <button class="contactBtn">Contact</button>
             </div>
         </section>
+        <!-- EVALUAR CAMBIO DE SECTION DE ACUERDO A LA DISTRIBUCION -->
         <section class="quoteSection flexCol">
             <h3 class="quoteTitle">What´s different between pros?</h3>
             <p class="quoteDescription">Manage provides all the functionality your
-                teas needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
+                teas needs, without the complexity. Our software is tailor-made for modern digital product teams. software is tailor-made for modern digital product teams</p>
 
         </section>
         <section class="listSection">
