--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
                 teas needs, without the complexity. Our software is tailor-made for modern digital product teams. software is tailor-made for modern digital product teams</p>
 
         </section>
+
+
+<!-- CARD SECTION -->
+
         <section class="listSection">
-            <ul class="flexCol">
-                <li class="flexCol">
+            <ul class="flexCol" id="cardList">
+                <li class="flexCol cardId">
                     <div class="card">
                         <div class="flexRow titleContainer">
                             <h4 class="cardNumber flexCol">01</h4>
@@ -57,7 +61,7 @@
                         <p class="cardDescription">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
                     </div>
                 </li>
-                <li class="flexCol">
+                <li class="flexCol cardId">
                     <div class="card">
                         <div class="flexRow titleContainer">
                             <h4 class="cardNumber flexCol">01</h4>
@@ -66,7 +70,7 @@
                         <p class="cardDescription">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
                     </div>
                 </li>
-                <li class="flexCol">
+                <li class="flexCol cardId">
                     <div class="card">
                         <div class="flexRow titleContainer">
                             <h4 class="cardNumber flexCol">01</h4>
@@ -77,8 +81,15 @@
                 </li>
             </ul>
         </section>
+
+
+
+
+
+
         <section class="bestSection flexCol">
             <h2 class="bestTitle">Best of the month</h2>
+          <div class="cardContainer">
             <div class="bestCard flexCol" id="card1">
                 <img class="bestCardImage" src="./root/img/avatar.lebron.png" alt="Lebron image">
                 <h4 class="bestCardTitle">Lebron</h4>
@@ -94,7 +105,7 @@
                 <h4 class="bestCardTitle">Lebron</h4>
                 <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </div>
-
+        </div>
         </section>
         <section class="lowerQuoteSection flexCol">
             <h2 class="lowerQuoteTitle">Get to  know the best teams of the year</h2>
