ready for initial review

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- CARD SECTION -->
 
-        <section class="listSection">
+<section class="listSection">
             <ul class="flexCol" id="cardList">
                 <li class="flexCol cardId">
                     <div class="card">
@@ -80,8 +80,7 @@
                     </div>
                 </li>
             </ul>
-        </section>
-
+        </section> 
 
 
 
@@ -106,14 +105,24 @@
                 <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </div>
         </div>
+
+        <button class="contactBtn moreBtn">More</button>
         </section>
+
+
+
+
+
+
+
         <section class="lowerQuoteSection flexCol">
             <h2 class="lowerQuoteTitle">Get to  know the best teams of the year</h2>
             <button class="quoteButton">Go for it</button>
         </section>
     </main>
 
-    <footer class="flexCol ">
+    <footer  class="flexCol ">
+       <div id="footerContainer">
         <div class="footerInputContainer flexRow">
             <input class="footerInput" type="text" name="" placeholder="Update in your inbox...">
             <button class="goBtn">Go</button>
@@ -133,16 +142,17 @@
         </div>
         <div class="footerImages flexCol">
             <nav class="flexRow iconContainer">
-                <a href="#"><img class="icon" src="./root/img/icon-facebook.svg"></a>
-                <a href="#"><img class="icon" src="./root/img/icon-youtube.svg"></a>
-                <a href="#"><img class="icon" src="./root/img/icon-twitter.svg"></a>
-                <a href="#"><img class="icon" src="./root/img/icon-pinterest.svg"></a>
-                <a href="#"><img class="icon" src="./root/img/icon-instagram.svg"></a>
+                <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-facebook.svg"></a>
+                <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-youtube.svg"></a>
+                <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-twitter.svg"></a>
+                <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-pinterest.svg"></a>
+                <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-instagram.svg"></a>
             </nav>
 
             
             <img src="./root/img/logo.svg" class="footerLogo" alt="Sportit Logo">
         </div>
+    </div>
         <p class="copyrigth">Copyright 2020. All Rights Reserved</p>
     </footer>
 
