--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./root/css/styleDesktop.css" /> -->
     <link rel="stylesheet" href="./root/css/styleMobile.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,42 +14,43 @@
     <title>Examen Final - Rivera Jorge - FrontEnd I</title>
   </head>
   <body>
-    <header class="headerContainer flexRow">
-        <img id="mainLogo" src="./root/img/logo.svg" alt="Sportit Logo" />
-        <nav class="anchorContainer">
-            <ul class="flexRow">
-                <li class="navLinkLi"><a class="navLink" href="#">Sports</a></li>
-                <li class="navLinkLi"><a class="navLink" href="#">Products</a></li>
-                <li class="navLinkLi"><a class="navLink" href="#">About Us</a></li>
-                <li class="navLinkLi"><a class="navLink" href="#">Training</a></li>
-                <li class="navLinkLi"><a class="navLink" href="#">Community</a></li>
-            </ul>
-        </nav>
-        <button class="contactBtn">Contact</button>
-        <img class="menuBtn" src="./root/img/icon-hamburger.svg" alt="Menu Icon">
-    </header>
+        <header class="headerContainer flexRow">
+                <img id="mainLogo" src="./root/img/logo.svg" alt="Sportit Logo" />
+                <nav class="anchorContainer">
+                        <ul class="flexRow">
+                                <li class="navLinkLi"><a class="navLink" href="#">Sports</a></li>
+                                <li class="navLinkLi"><a class="navLink" href="#">Products</a></li>
+                                <li class="navLinkLi"><a class="navLink" href="#">About Us</a></li>
+                                <li class="navLinkLi"><a class="navLink" href="#">Training</a></li>
+                                <li class="navLinkLi"><a class="navLink" href="#">Community</a></li>
+                        </ul>
+                </nav>
+                <button class="contactBtn" id="headerContactBtn">Contact</button>
+                <img class="menuBtn" src="./root/img/icon-hamburger.svg" alt="Menu Icon">
+        </header>
 
      <main>
+<!-- HERO SECTION -->
         <section class="heroSection flexCol">
-            <img id="padelPlayer" src="./root/img/padel-intro.png" alt="Padel Player">
-            <div class="padelIntro">
-                <h1 class="mainTitle">LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
-                <p class="mainDescription">The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</p>
-                <button class="contactBtn">Contact</button>
-            </div>
+                <img id="padelPlayer" src="./root/img/padel-intro.png" alt="Padel Player">
+                <div class="padelText">
+                        <h1 class="mainTitle">LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
+                        <p class="mainDescription">The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</p>
+                        <button class="contactBtn">Contact</button>
+                </div>
         </section>
-        <!-- EVALUAR CAMBIO DE SECTION DE ACUERDO A LA DISTRIBUCION -->
+        
+<!-- QUOTE SECTION -->
         <section class="quoteSection flexCol">
             <h3 class="quoteTitle">What´s different between pros?</h3>
-            <p class="quoteDescription">Manage provides all the functionality your
-                teas needs, without the complexity. Our software is tailor-made for modern digital product teams. software is tailor-made for modern digital product teams</p>
+            <p class="quoteDescription" id="quoteDesktop">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</p>
+            <p class="quoteDescription" id="quoteMobile">Manage provides all the functionality your
+                teas needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
 
         </section>
 
-
-<!-- CARD SECTION -->
-
-<section class="listSection">
+<!-- LIST SECTION -->
+        <section class="listSection">
             <ul class="flexCol" id="cardList">
                 <li class="flexCol cardId">
                     <div class="card">
@@ -64,8 +64,8 @@
                 <li class="flexCol cardId">
                     <div class="card">
                         <div class="flexRow titleContainer">
-                            <h4 class="cardNumber flexCol">01</h4>
-                            <h4 class="cardTitle">Track company-wide progress</h4>
+                            <h4 class="cardNumber flexCol">02</h4>
+                            <h4 class="cardTitle">Advance built-in reports</h4>
                         </div>
                         <p class="cardDescription">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
                     </div>
@@ -73,8 +73,8 @@
                 <li class="flexCol cardId">
                     <div class="card">
                         <div class="flexRow titleContainer">
-                            <h4 class="cardNumber flexCol">01</h4>
-                            <h4 class="cardTitle">Track company-wide progress</h4>
+                            <h4 class="cardNumber flexCol">03</h4>
+                            <h4 class="cardTitle">Everything you need in one place</h4>
                         </div>
                         <p class="cardDescription">Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor.</p>
                     </div>
@@ -82,84 +82,69 @@
             </ul>
         </section> 
 
-
-
-
+<!-- BEST SECTION -->
 
         <section class="bestSection flexCol">
-            <h2 class="bestTitle">Best of the month</h2>
-          <div class="cardContainer">
-            <div class="bestCard flexCol" id="card1">
-                <img class="bestCardImage" src="./root/img/avatar.lebron.png" alt="Lebron image">
-                <h4 class="bestCardTitle">Lebron</h4>
-                <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-            </div>
-            <div class="bestCard flexCol" id="card2">
-                <img class="bestCardImage" src="./root/img/avatar.lebron.png" alt="Lebron image">
-                <h4 class="bestCardTitle">Lebron</h4>
-                <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-            </div>
-            <div class="bestCard flexCol" id="card3">
-                <img class="bestCardImage" src="./root/img/avatar.lebron.png" alt="Lebron image">
-                <h4 class="bestCardTitle">Lebron</h4>
-                <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-            </div>
-        </div>
-
-        <button class="contactBtn moreBtn">More</button>
+                <h2 class="bestTitle">Best of the month</h2>
+                <div class="cardContainer">
+                    <div class="bestCard flexCol" id="card1">
+                        <img class="bestCardImage" src="./root/img/avatar-sanyo.png"       alt="Sanyo image">
+                        <h4 class="bestCardTitle">Sanyo</h4>
+                        <p class="bestCardDescription">Etiam fermentum, nulla eget      gravida cursus, purus lectus feugiat mauris, ut suscipit massa      ipsum eu neque. Orci varius natoque penatibus et magnis dis    parturient montes, nascetur ridiculus mus. </p>
+                    </div>
+                    <div class="bestCard flexCol" id="card2">
+                        <img class="bestCardImage" src="./root/img/avatar.lebron.png"       alt="Lebron image">
+                        <h4 class="bestCardTitle">Lebron</h4>
+                        <p class="bestCardDescription">Etiam fermentum, nulla eget      gravida cursus, purus lectus feugiat mauris, ut suscipit massa      ipsum eu neque. Orci varius natoque penatibus et magnis dis    parturient montes, nascetur ridiculus mus. </p>
+                    </div>
+                    <div class="bestCard flexCol" id="card3">
+                        <img class="bestCardImage" src="./root/img/avatar-navarro.png" alt="Navarro image">
+                        <h4 class="bestCardTitle">Navarro</h4>
+                         <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                     </div>
+                </div>
+                <button class="contactBtn moreBtn">More</button>
         </section>
 
-
-
-
-
-
-
+<!-- LOWER QUOTE SECTION -->
         <section class="lowerQuoteSection flexCol">
             <h2 class="lowerQuoteTitle">Get to  know the best teams of the year</h2>
             <button class="quoteButton">Go for it</button>
         </section>
     </main>
 
+<!-- FOOTER SECTION -->
     <footer  class="flexCol ">
-       <div id="footerContainer">
-        <div class="footerInputContainer flexRow">
-            <input class="footerInput" type="text" name="" placeholder="Update in your inbox...">
-            <button class="goBtn">Go</button>
-        </div>
-        <div class="footerLinks flexRow">
-            <ul class="footerLinksList">
-                <li class="footerLink"><a class="footerA" href="#">Home</a></li>
-                <li class="footerLink"><a class="footerA" href="#">Pricing</a></li>
-                <li class="footerLink"><a class="footerA" href="#">Products</a></li>
-                <li class="footerLink"><a class="footerA" href="#">About Us</a></li>
-            </ul>
-            <ul class="footerLinksList">
-                <li class="footerLink"><a class="footerA" href="#">Training</a></li>
-                <li class="footerLink"><a class="footerA" href="#">Community</a></li>
-                <li class="footerLink"><a class="footerA" href="#">Privacy Policy</a></li>
-            </ul>
-        </div>
-        <div class="footerImages flexCol">
-            <nav class="flexRow iconContainer">
-                <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-facebook.svg"></a>
-                <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-youtube.svg"></a>
-                <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-twitter.svg"></a>
-                <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-pinterest.svg"></a>
-                <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-instagram.svg"></a>
-            </nav>
-
-            
-            <img src="./root/img/logo.svg" class="footerLogo" alt="Sportit Logo">
-        </div>
-    </div>
-        <p class="copyrigth">Copyright 2020. All Rights Reserved</p>
+            <div id="footerContainer">
+                    <div class="footerInputContainer flexRow">
+                        <input class="footerInput" type="text" name="" placeholder="Update in your inbox...">
+                        <button type="submit" class="goBtn">Go</button>
+                    </div>
+                    <div class="footerLinks flexRow">
+                        <ul class="footerLinksList">
+                                <li class="footerLink"><a class="footerA" href="#">Home</a></li>
+                                <li class="footerLink"><a class="footerA" href="#">Pricing</a></li>
+                                <li class="footerLink"><a class="footerA" href="#">Products</a></li>
+                                <li class="footerLink"><a class="footerA" href="#">About Us</a></li>
+                        </ul>
+                        <ul class="footerLinksList">
+                                <li class="footerLink"><a class="footerA" href="#">Training</a></li>
+                                <li class="footerLink"><a class="footerA" href="#">Community</a></li>
+                                <li class="footerLink"><a class="footerA" href="#">Privacy Policy</a></li>
+                        </ul>
+                    </div>
+                    <div class="footerImages flexCol">
+                        <nav class="flexRow iconContainer">
+                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-facebook.svg"></a>
+                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-youtube.svg"></a>
+                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-twitter.svg"></a>
+                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-pinterest.svg"></a>
+                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-instagram.svg"></a>
+                        </nav>
+                        <img src="./root/img/logo.svg" class="footerLogo" alt="Sportit          Logo">
+                    </div>
+            </div>
+            <p class="copyrigth">Copyright 2020. All Rights Reserved</p>
     </footer>
-
-
-
-
-
-
-  </body>
+</body>
 </html>
