--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-pinterest.svg"></a>
                             <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-instagram.svg"></a>
                         </nav>
-                        <img src="./root/img/logo.svg" class="footerLogo" alt="Sportit          Logo">
+                        <img src="./root/img/footerLogo.png" class="footerLogo" alt="Sportit          Logo">
                     </div>
             </div>
             <p class="copyrigth">Copyright 2020. All Rights Reserved</p>
