--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./root/css/styleMobile.css" />
+    <link rel="stylesheet" href="./root/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -87,21 +87,21 @@
         <section class="bestSection flexCol">
                 <h2 class="bestTitle">Best of the month</h2>
                 <div class="cardContainer">
-                    <div class="bestCard flexCol" id="card1">
+                    <article class="bestCard flexCol" id="card1">
                         <img class="bestCardImage" src="./root/img/avatar-sanyo.png"       alt="Sanyo image">
                         <h4 class="bestCardTitle">Sanyo</h4>
                         <p class="bestCardDescription">Etiam fermentum, nulla eget      gravida cursus, purus lectus feugiat mauris, ut suscipit massa      ipsum eu neque. Orci varius natoque penatibus et magnis dis    parturient montes, nascetur ridiculus mus. </p>
-                    </div>
-                    <div class="bestCard flexCol" id="card2">
+                    </article>
+                    <article class="bestCard flexCol" id="card2">
                         <img class="bestCardImage" src="./root/img/avatar.lebron.png"       alt="Lebron image">
                         <h4 class="bestCardTitle">Lebron</h4>
                         <p class="bestCardDescription">Etiam fermentum, nulla eget      gravida cursus, purus lectus feugiat mauris, ut suscipit massa      ipsum eu neque. Orci varius natoque penatibus et magnis dis    parturient montes, nascetur ridiculus mus. </p>
-                    </div>
-                    <div class="bestCard flexCol" id="card3">
+                    </article>
+                    <article class="bestCard flexCol" id="card3">
                         <img class="bestCardImage" src="./root/img/avatar-navarro.png" alt="Navarro image">
                         <h4 class="bestCardTitle">Navarro</h4>
                          <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-                     </div>
+                     </article>
                 </div>
                 <button class="contactBtn moreBtn">More</button>
         </section>
@@ -116,10 +116,10 @@
 <!-- FOOTER SECTION -->
     <footer  class="flexCol ">
             <div id="footerContainer">
-                    <div class="footerInputContainer flexRow">
-                        <input class="footerInput" type="text" name="" placeholder="Update in your inbox...">
+                    <form class="footerInputContainer flexRow">
+                        <input class="footerInput" type="email" name="" placeholder="Update in your inbox...">
                         <button type="submit" class="goBtn">Go</button>
-                    </div>
+                    </form>
                     <div class="footerLinks flexRow">
                         <ul class="footerLinksList">
                                 <li class="footerLink"><a class="footerA" href="#">Home</a></li>
