final version for deliver

--- a/root/index.html
+++ b/root/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./root/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +15,7 @@
   </head>
   <body>
         <header class="headerContainer flexRow">
-                <img id="mainLogo" src="./root/img/logo.svg" alt="Sportit Logo" />
+                <img id="mainLogo" src="./img/logo.svg" alt="Sportit Logo" />
                 <nav class="anchorContainer">
                         <ul class="flexRow">
                                 <li class="navLinkLi"><a class="navLink" href="#">Sports</a></li>
@@ -26,13 +26,13 @@
                         </ul>
                 </nav>
                 <button class="contactBtn" id="headerContactBtn">Contact</button>
-                <img class="menuBtn" src="./root/img/icon-hamburger.svg" alt="Menu Icon">
+                <img class="menuBtn" src="./img/icon-hamburger.svg" alt="Menu Icon">
         </header>
 
      <main>
 <!-- HERO SECTION -->
         <section class="heroSection flexCol">
-                <img id="padelPlayer" src="./root/img/padel-intro.png" alt="Padel Player">
+                <img id="padelPlayer" src="./img/padel-intro.png" alt="Padel Player">
                 <div class="padelText">
                         <h1 class="mainTitle">LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
                         <p class="mainDescription">The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</p>
@@ -88,17 +88,17 @@
                 <h2 class="bestTitle">Best of the month</h2>
                 <div class="cardContainer">
                     <article class="bestCard flexCol" id="card1">
-                        <img class="bestCardImage" src="./root/img/avatar-sanyo.png"       alt="Sanyo image">
+                        <img class="bestCardImage" src="./img/avatar-sanyo.png"       alt="Sanyo image">
                         <h4 class="bestCardTitle">Sanyo</h4>
                         <p class="bestCardDescription">Etiam fermentum, nulla eget      gravida cursus, purus lectus feugiat mauris, ut suscipit massa      ipsum eu neque. Orci varius natoque penatibus et magnis dis    parturient montes, nascetur ridiculus mus. </p>
                     </article>
                     <article class="bestCard flexCol" id="card2">
-                        <img class="bestCardImage" src="./root/img/avatar.lebron.png"       alt="Lebron image">
+                        <img class="bestCardImage" src="./img/avatar.lebron.png"       alt="Lebron image">
                         <h4 class="bestCardTitle">Lebron</h4>
                         <p class="bestCardDescription">Etiam fermentum, nulla eget      gravida cursus, purus lectus feugiat mauris, ut suscipit massa      ipsum eu neque. Orci varius natoque penatibus et magnis dis    parturient montes, nascetur ridiculus mus. </p>
                     </article>
                     <article class="bestCard flexCol" id="card3">
-                        <img class="bestCardImage" src="./root/img/avatar-navarro.png" alt="Navarro image">
+                        <img class="bestCardImage" src="./img/avatar-navarro.png" alt="Navarro image">
                         <h4 class="bestCardTitle">Navarro</h4>
                          <p class="bestCardDescription">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
                      </article>
@@ -135,13 +135,13 @@
                     </div>
                     <div class="footerImages flexCol">
                         <nav class="flexRow iconContainer">
-                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-facebook.svg"></a>
-                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-youtube.svg"></a>
-                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-twitter.svg"></a>
-                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-pinterest.svg"></a>
-                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./root/img/icon-instagram.svg"></a>
+                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./img/icon-facebook.svg"></a>
+                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./img/icon-youtube.svg"></a>
+                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./img/icon-twitter.svg"></a>
+                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./img/icon-pinterest.svg"></a>
+                            <a class="socialNetworkAnchor" href="#"><img class="icon" src="./img/icon-instagram.svg"></a>
                         </nav>
-                        <img src="./root/img/footerLogo.png" class="footerLogo" alt="Sportit          Logo">
+                        <img src="./img/footerLogo.png" class="footerLogo" alt="Sportit          Logo">
                     </div>
             </div>
             <p class="copyrigth">Copyright 2020. All Rights Reserved</p>
